inserisco un po di css al momento di cambio status

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,11 @@
 .toDo{
     text-decoration: line-through;
 }
+i{
+    font-size: 1.5rem;
+    color: rgb(235, 0, 0);
+}
+span{
+    display: flex;
+    align-items: center;
+}
